# audiorw

./: CMakeLists.txt  README.md
example/: convert.cpp  generate_a.cpp
include/audiorw/: audio.hpp  audiorw.hpp
modules/: FindFFMPEG.cmake
src/: read.cpp  write.cpp
test/: sine.cpp
